versioned_docs/version-2023.2.1/professor/jael_dos_santos.mdx
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";
export const data = {
  title: "Jael dos Santos",
  base: "",
  weekClasses: [
    {
      dayName: "Segunda-Feira",
      dayClasses: []
    },
    {
      dayName: "Terça-Feira",
      dayClasses: [
        {
          subject: "História II",
          size: 1,
          teachers: [
            "Jael dos Santos"
          ],
          classroom: "Sala 6",
          students: [
            "IIW2022B"
          ],
          time: "09:25 - 10:15"
        }
      ]
    },
    {
      dayName: "Quarta-Feira",
      dayClasses: [
        {
          subject: "História I",
          size: 1,
          teachers: [
            "Jael dos Santos"
          ],
          classroom: "Sala 8",
          students: [
            "IIW2023B"
          ],
          time: "07:30 - 08:20"
        }
      ]
    },
    {
      dayName: "Quinta-Feira",
      dayClasses: [
        {
          subject: "História I",
          size: 1,
          teachers: [
            "Jael dos Santos"
          ],
          classroom: "Sala 9-2",
          students: [
            "IIW2023A"
          ],
          time: "09:25 - 10:15"
        },
        {
          subject: "História II",
          size: 2,
          teachers: [
            "Jael dos Santos"
          ],
          classroom: "Sala 13-2",
          students: [
            "IIW2022A"
          ],
          time: "07:30 - 08:20"
        },
        {
          subject: "História III",
          size: 2,
          teachers: [
            "Jael dos Santos"
          ],
          classroom: "Sala 16-2",
          students: [
            "IIW2021"
          ],
          time: "10:15 - 11:05"
        }
      ]
    },
    {
      dayName: "Sexta-Feira",
      dayClasses: [
        {
          subject: "História II",
          size: 1,
          teachers: [
            "Jael dos Santos"
          ],
          classroom: "Sala 6",
          students: [
            "IIW2022B"
          ],
          time: "09:25 - 10:15"
        }
      ]
    }
  ],
  time: [
    {
      time: "07:30 - 08:20",
      size: 50
    },
    {
      time: "08:20 - 09:10",
      size: 50
    },
    {
      time: "09:25 - 10:15",
      size: 50
    },
    {
      time: "10:15 - 11:05",
      size: 50
    },
    {
      time: "11:05 - 11:55",
      size: 50
    },
    {
      time: "13:10 - 14:00",
      size: 50
    },
    {
      time: "14:00 - 14:50",
      size: 50
    },
    {
      time: "15:05 - 15:55",
      size: 50
    },
    {
      time: "15:55 - 16:45",
      size: 50
    },
    {
      time: "16:45 - 17:35",
      size: 50
    },
    {
      time: "19:00 - 19:50",
      size: 50
    },
    {
      time: "19:50 - 20:40",
      size: 50
    },
    {
      time: "21:00 - 21:50",
      size: 50
    },
    {
      time: "21:50 - 22:40",
      size: 50
    }
  ]
}

# Jael dos Santos

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
